Copied to clipboard!
Make it more obvious it’s auto copied

--- a/app/popup.html
+++ b/app/popup.html
@@ -12,6 +12,11 @@
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
       }
+      #copied {
+        color: #9E9E9E;
+        font-size: 70%;
+        padding-top: 10px;
+      }
     </style>
 
     <!--
@@ -25,5 +30,6 @@
   </head>
   <body>
     <div id="status"></div>
+    <div align="right" id="copied">Copied to clipboard!</div>
   </body>
 </html>
