--- a/app/popup.html
+++ b/app/popup.html
@@ -8,14 +8,18 @@
   <head>
     <title>shrtlnk</title>
     <style>
-      body {
+      #status {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
+        font-size: 16px;
       }
       #copied {
-        color: #9E9E9E;
-        font-size: 70%;
+        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+        font-size: 12px;
         padding-top: 10px;
+        color: #9E9E9E;
+        text-align: right;
+      }
+      #copy {
       }
     </style>
 
@@ -30,6 +34,7 @@
   </head>
   <body>
     <div id="status"></div>
-    <div align="right" id="copied">Copied to clipboard!</div>
+    <div id="copied">Copied to clipboard!</div>
+    <div id="copy"></div>
   </body>
 </html>
